[gd_scene load_steps=15 format=2]

[ext_resource path="res://resources/logo.png" type="Texture" id=1]
[ext_resource path="res://resources/fonts/Comfortaa-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://resources/green_button_style.tres" type="StyleBox" id=3]
[ext_resource path="res://resources/input_style.tres" type="StyleBox" id=4]
[ext_resource path="res://src/ui/main_menu.gd" type="Script" id=5]
[ext_resource path="res://src/ui/common/loading_indicator.tscn" type="PackedScene" id=6]
[ext_resource path="res://resources/fonts/ui_font.tres" type="DynamicFont" id=7]
[ext_resource path="res://resources/button_style.tres" type="StyleBox" id=8]

[sub_resource type="StyleBoxFlat" id=1]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.298039, 0.345098, 0.392157, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0.298039, 0.345098, 0.392157, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0, 0, 0, 0.388235 )
shadow_offset = Vector2( 4, 4 )

[sub_resource type="StyleBoxFlat" id=2]
content_margin_left = 20.0
content_margin_right = 20.0
content_margin_top = 20.0
content_margin_bottom = 20.0
bg_color = Color( 0.333333, 0.384314, 0.439216, 1 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0.298039, 0.345098, 0.392157, 1 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0, 0, 0, 0.388235 )
shadow_offset = Vector2( 4, 4 )

[sub_resource type="DynamicFont" id=3]
size = 18
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.780392, 0.956863, 0.392157, 0.501961 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0.698039, 0.858824, 0.34902, 0.501961 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0, 0, 0, 0.388235 )
shadow_offset = Vector2( 4, 4 )

[sub_resource type="DynamicFont" id=5]
size = 48
extra_spacing_top = 4
font_data = ExtResource( 2 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.305882, 0.803922, 0.768627, 0.501961 )
border_width_left = 6
border_width_top = 6
border_width_right = 6
border_width_bottom = 6
border_color = Color( 0.27451, 0.721569, 0.690196, 0.501961 )
corner_radius_top_left = 10
corner_radius_top_right = 10
corner_radius_bottom_right = 10
corner_radius_bottom_left = 10
shadow_color = Color( 0, 0, 0, 0.388235 )
shadow_offset = Vector2( 4, 4 )

[node name="MainMenu" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CenterContainer" type="CenterContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer"]
margin_left = 160.0
margin_top = 230.0
margin_right = 440.0
margin_bottom = 835.0
custom_constants/separation = 100

[node name="TextureRect" type="TextureRect" parent="CenterContainer/VBoxContainer"]
margin_right = 280.0
margin_bottom = 160.0
rect_pivot_offset = Vector2( 140, 54 )
texture = ExtResource( 1 )

[node name="VBoxContainer" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 260.0
margin_right = 280.0
margin_bottom = 321.0

[node name="LineEdit" type="LineEdit" parent="CenterContainer/VBoxContainer/VBoxContainer"]
margin_right = 280.0
margin_bottom = 61.0
custom_styles/read_only = SubResource( 1 )
custom_styles/focus = SubResource( 2 )
custom_styles/normal = ExtResource( 4 )
custom_fonts/font = SubResource( 3 )
max_length = 30
placeholder_text = "Nickname"
placeholder_alpha = 0.33
caret_blink = true

[node name="VBoxContainer2" type="VBoxContainer" parent="CenterContainer/VBoxContainer"]
margin_top = 421.0
margin_right = 280.0
margin_bottom = 605.0
custom_constants/separation = 40

[node name="Button" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer2"]
margin_right = 280.0
margin_bottom = 86.0
rect_min_size = Vector2( 0, 86 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 3 )
custom_styles/pressed = ExtResource( 3 )
custom_styles/focus = ExtResource( 3 )
custom_styles/disabled = SubResource( 4 )
custom_styles/normal = ExtResource( 3 )
custom_fonts/font = SubResource( 5 )
custom_colors/font_color_disabled = Color( 0.333333, 0.384314, 0.439216, 1 )
custom_colors/font_color = Color( 0.333333, 0.384314, 0.439216, 1 )
custom_colors/font_color_hover = Color( 0.298039, 0.345098, 0.392157, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
disabled = true
text = "Play"

[node name="CenterContainer" type="CenterContainer" parent="CenterContainer/VBoxContainer/VBoxContainer2"]
margin_top = 126.0
margin_right = 280.0
margin_bottom = 184.0

[node name="Button2" type="Button" parent="CenterContainer/VBoxContainer/VBoxContainer2/CenterContainer"]
margin_left = 30.0
margin_right = 250.0
margin_bottom = 58.0
rect_min_size = Vector2( 220, 58 )
focus_mode = 0
mouse_default_cursor_shape = 2
custom_styles/hover = ExtResource( 8 )
custom_styles/pressed = ExtResource( 8 )
custom_styles/focus = ExtResource( 8 )
custom_styles/disabled = SubResource( 6 )
custom_styles/normal = ExtResource( 8 )
custom_fonts/font = ExtResource( 7 )
custom_colors/font_color_disabled = Color( 0.333333, 0.384314, 0.439216, 1 )
custom_colors/font_color = Color( 0.333333, 0.384314, 0.439216, 1 )
custom_colors/font_color_hover = Color( 0.298039, 0.345098, 0.392157, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
text = "High Scores"

[node name="LoadingIndicator" parent="." instance=ExtResource( 6 )]
visible = false

[connection signal="focus_entered" from="CenterContainer/VBoxContainer/VBoxContainer/LineEdit" to="." method="_on_LineEdit_focus_entered"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer2/Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="CenterContainer/VBoxContainer/VBoxContainer2/CenterContainer/Button2" to="." method="_on_Button2_pressed"]
